# aidlc-workflows

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CONTRIBUTING.md
.github/workflows/: codebuild.yml  mcp-server-ci.yml  mcp-server-release.yml  release-pr.yml  release.yml  security-scanners.yml  tag-on-merge.yml
aidlc-mcp-server/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  pytest.ini
aidlc-mcp-server/.github/workflows/: ci.yml  release.yml
aidlc-mcp-server/aidlc_mcp_server/: __init__.py  __version__.py  main.py  project.py  server.py  validation.py  workflow_loader.py
aidlc-mcp-server/scripts/: generate-build-info.sh  sync-aidlc-rules.sh  sync-and-test-rules.sh
aidlc-mcp-server/tests/: test_project.py  test_server.py  test_validation.py  test_workflow_loader.py
docs/: ADMINISTRATIVE_GUIDE.md  DEVELOPERS_GUIDE.md
